...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jbb-lm-h5w">
                                <rect key="frame" x="280" y="79" width="59" height="31"/>
                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="17"/>
                                <state key="normal" title="+ add kid">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="addPressed:" destination="2qg-eR-EEt" eventType="touchUpInside" id="43K-Sa-nEn"/>
                                </connections>
                            </button>
...
                    </view>
                    <navigationItem key="navigationItem" id="Sn9-Xb-DYQ"/>
                    <nil key="simulatedBottomBarMetrics"/>
                    <connections>
                        <outlet property="stackView" destination="tee-r2-uUG" id="ndI-15-b9w"/>
                        <segue destination="IJL-qp-pft" kind="show" identifier="addKid" id="c84-Mq-NIv"/>
                        <segue destination="fIZ-xm-aq4" kind="push" identifier="next" id="JXU-rv-Cmi"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Mz1-g3-Ly1" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="977" y="15"/>
        </scene>
...
                            <constraint firstItem="gIW-u5-IQg" firstAttribute="top" secondItem="nN3-ms-MQd" secondAttribute="bottom" constant="15" id="j9B-vq-fYT"/>
                            <constraint firstItem="BOz-ZY-9kK" firstAttribute="top" secondItem="gIW-u5-IQg" secondAttribute="bottom" constant="7" id="quL-Ek-NJI"/>
                            <constraint firstAttribute="trailingMargin" secondItem="gIW-u5-IQg" secondAttribute="trailing" id="v6x-fC-9td"/>
                            <constraint firstItem="nN3-ms-MQd" firstAttribute="centerX" secondItem="SS5-Dc-Xmb" secondAttribute="centerX" id="ywe-Gm-G7W"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Birthday" id="kny-G7-Ks8">
                        <barButtonItem key="rightBarButtonItem" title="skip" id="tKF-sq-AnB">
                            <connections>
                                <action selector="skipPressed:" destination="iLl-ke-Cas" id="5Nj-ge-fp9"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
